# cookiecutters-pypackage

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  publish-test.yaml  publish.yaml
