[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.short_description}}"
authors = ["Riccardo Lincetto <37301469+RiccardoLincetto@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "{{cookiecutter.package_name}}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
